<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.judopay.view.custom.DefaultCustomConstraintLayout
        android:id="@+id/ideal_payment_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.judopay.view.custom.DefaultCustomTextInputLayout
            android:id="@+id/name_layout"
            style="@style/Widget.Judo.EntryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginEnd="@dimen/large_padding"
            android:hint="@string/enter_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.judopay.view.custom.DefaultCustomTextInputLayout>

        <com.judopay.view.custom.DefaultCustomTextView
            android:id="@+id/bank_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/medium_padding"
            android:text="@string/bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_layout"
            />

        <com.judopay.view.custom.DefaultCustomSpinner
            android:id="@+id/bank_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_padding"
            android:layout_marginTop="@dimen/medium_padding"
            android:layout_marginEnd="@dimen/large_padding"
            android:dropDownVerticalOffset="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/bank_spinner_label"
            app:layout_constraintTop_toBottomOf="@id/bank_spinner_label"
            tools:listitem="@layout/item_bank_spinner" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.judopay.view.custom.DefaultCustomButton
                android:id="@+id/ideal_payment_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textAllCaps="false" />
        </FrameLayout>

        <WebView
            android:id="@+id/ideal_web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.judopay.view.custom.DefaultCustomConstraintLayout>

    <include
        android:id="@+id/status_view_layout"
        layout="@layout/view_status"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>