<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/Widget.Judo.PaddedLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/card_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/card_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/card_number_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/start_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.judopay.view.JudoEditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/start_date_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/issue_number_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.judopay.view.JudoEditText
                        android:id="@+id/issue_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/issue_number_label" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiry_date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/expiry_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/expiry_date_label"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/security_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.judopay.view.JudoEditText
                    android:id="@+id/security_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/security_code" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/country_postcode_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            tools:visibility="visible">

            <Spinner
                android:id="@+id/country_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.5dp"
                android:layout_weight="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/post_code_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1">

                <com.judopay.view.JudoEditText
                    android:id="@+id/post_code_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/billing_postcode"
                    android:imeOptions="actionDone"
                    tools:ignore="UnusedAttribute" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/footer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_padding"
            android:layout_marginTop="@dimen/large_padding"
            android:layout_marginRight="@dimen/small_padding"
            android:lineSpacingMultiplier="@dimen/spaced_text"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="@dimen/judo_small_text_size" />

        <Button
            android:id="@+id/pay_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/confirm_payment" />

    </LinearLayout>

</ScrollView>