<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/securityCodeContainer"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_44"
    android:background="@drawable/edit_text_background"
    android:paddingStart="@dimen/padding_14"
    android:paddingEnd="@dimen/padding_14">

    <TextView
        android:visibility="gone"
        android:id="@+id/securityCodeError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_6"
        android:textColor="@color/error"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/securityCodeEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/security_code" />

    <com.judopay.view.JudoEditText
        android:id="@+id/securityCodeEditText"
        style="@style/Widget.Judo.SecurityCode"
        android:background="@null"
        android:textSize="@dimen/text_size_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
